src/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_AsyncRecordsNotOnRoot.xaml
<Page xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
<DockPanel xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
>
	<Button x:AsyncRecords="80" />

</DockPanel>
</Page>
